--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/MDhanushraju/Project-Food-recipe",
+  "homepage": "https://mdhanushraju.github.io/Project-Food-recipe",
   "name": "reactfolder",
   "version": "0.1.0",
   "private": true,
